<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="160dp"
        android:text="Sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonClear" />

    <!-- TextView for Read-Only Text -->

    <EditText
        android:id="@+id/userInput"
        android:layout_width="266dp"
        android:layout_height="62dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="Enter 3 - 8 Numbers"
        android:inputType="text"
        android:textColorHint="#BDBDBD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="56dp"
        android:text="Clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displaySortTextView"
        android:layout_width="280dp"
        android:layout_height="412dp"
        android:layout_marginTop="216dp"
        android:background="@drawable/text_border"
        android:padding="10dp"
        android:text="Welcome to Visual Sort! \n\nInput criteria: \n\n1. Numbers only, 0-9 \n2. Input should contain 3 to 8 numbers separated by a space \n\nEx. 6 5 8 9 7 4 2 3"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Visual Sort"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#4A148C"
        android:shadowColor="#1A000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:letterSpacing="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/buttonNewSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="232dp"
        android:text="New Sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>