<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/errorConstraintLayout"
    android:layout_width="350dp"
    android:layout_height="500dp"
    android:background="#FAFDF6F6"
    android:backgroundTint="#F8F4F4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#512DA8"
        android:padding="12dp"
        android:text="Error"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/errorDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"
        android:background="#FBFBFB"
        android:backgroundTint="#F8F5F5"
        android:gravity="center_horizontal"
        android:text="Input should be numbers only, and contain 3 to 8 numbers. Please try again"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorTitle"
        app:layout_constraintVertical_bias="0.326" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="@+id/layoutDialog"
        app:layout_constraintStart_toStartOf="@+id/layoutDialog"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/errorClose"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_border"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="Close"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorDesc"
        app:layout_constraintVertical_bias="0.802" />


</androidx.constraintlayout.widget.ConstraintLayout>

